Logout fix, vertical scrollbar fix, comments fix and improves

--- a/src/app/main/header/header/header.component.scss
+++ b/src/app/main/header/header/header.component.scss
@@ -111,7 +111,7 @@ label {
   }
 
   button.sign-out {
-    font-family: Rubik;
+    font-family: Rubik, serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
